--- a/src/application/view/GameDisplay.fxml
+++ b/src/application/view/GameDisplay.fxml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="application.view.GameDisplayController">
-	<!-- TODO Add Nodes -->
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.view.GameDisplayController">
+   <children>
+      <ImageView fitHeight="90.0" fitWidth="20.0" layoutX="24.0" layoutY="108.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="90.0" fitWidth="20.0" layoutX="551.0" layoutY="155.0" pickOnBounds="true" preserveRatio="true" />
+   </children>
 </AnchorPane>
